--- a/products.html
+++ b/products.html
@@ -12,6 +12,6 @@
     <body>
           <h1>商品紹介</h1>
           <p>ああああああああああああああ</p>
-          <p><a href="index.html">←ホームに戻る</a></p>
+          <p><a href="Create index.html">←ホームに戻る</a></p>
     </body>
     </html>
