--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
      </header>
 
      <nav>
-            <a href="#">ホーム</a>
-            <a href="#">商品紹介</a>
-            <a href="#">こころケア文具とは</a>
-            <a href="#">お問い合わせ</a>
+            <a href="index.html">ホーム</a>
+            <a href="products.html">商品紹介</a>
+            <a href="about.htnl">こころケア文具とは</a>
+            <a href="contact.html">お問い合わせ</a>
      </nav>
 
 ～仮
