--- a/index.html
+++ b/index.html
@@ -74,31 +74,64 @@
      <nav>
             <a href="index.html">ホーム</a>
             <a href="products.html">商品紹介</a>
-            <a href="about.htnl">こころケア文具とは</a>
-            <a href="contact.html">お問い合わせ</a>
+            <a href="about.html">こころケア文具とは</a>
+            <a href="coutact.html">お問い合わせ</a>
      </nav>
 
-～仮
+<br>
+<br>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<style>
+.section{
+         text-align: center;
+         }
+</style>
+</head>
+<body>
     <div class="main">
        <div class="section">
-         <h2>　　　　　　　　　　　　　　　　　　　　　　　ようこそ、こころの文具室へ</h2>
+         <h2>ようこそ、こころの文具室へ</h2>
          <p>
-           　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　　あああああああああああああああ
+           「こころの文具室」は、書くことを通して心を整える文具を集めたお店です。
+         <br>忙しい毎日の中で、自分と向き合うひとときを届けます。
          </p>
        </div>
-仮～
+</body>
+</html>
+
 
      <main>
             <h2>おすすめ文具</h2>
 
 
             <div class="product">
-                <h3>あああああああ</h3>
-                <p>あああああああああああああああ</div>
+                <h3>ことばふせん</h3>
+
+<img src="00475.jpg" "width="200" height="200" >
+
+                <p>１枚ずつに「大丈夫だよ」「今日はよく頑張ったね」など
+            <br>   優しいメッセージ付き</div>
 
             <div class="product">
-                <h3>あああああああ</h3>
-                <p>あああああああああああああああ</div>
+                <h3>感情スタンプセット</h3>
+
+<img src="360.jpg" "width="200" height="200" >
+
+                <p>「うれしい」「かなしい」「もやもや」など
+            <br>
+                その時の気持ちを日記に押して記録</div>
+
+            <div class="product">
+                <h3>空想日記</h3>
+
+<img src="023.png" "width="200" height="200" >
+
+                <p>毎日「今日あったこと＋空想の世界」など自由に書けるノート</div>
+
      </main>
 
 
