--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
             <div class="product">
-                <h3>ことばふせん</h3>
+<a href="products.html"><h3>ことばふせん</h3></a>
 
 <img src="00475.jpg" "width="200" height="200" >
 
