--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <br>   優しいメッセージ付き</div>
 
             <div class="product">
-                <h3>感情スタンプセット</h3>
+<a href="products.html"><h3>感情スタンプセット</h3></a>
 
 <img src="360.jpg" "width="200" height="200" >
 
@@ -126,7 +126,7 @@
                 その時の気持ちを日記に押して記録</div>
 
             <div class="product">
-                <h3>空想日記</h3>
+<a href="products.html"><h3>空想日記</h3></a>
 
 <img src="023.png" "width="200" height="200" >
 
