--- a/products.html
+++ b/products.html
@@ -4,14 +4,123 @@
           <meta charset="UTF-8">
           <title>商品紹介　- こころの文具室</title>
           <style>
-                 body { font-family: "Yu Gothic", sans-serif; background-color: #f2f8f7; padding: 30px; }
-                 h1 {color: #3a5a5d; }
-                 a { color: #3a5a5c; text-decoration: none; }
-          </style>
+            body{
+                 font-family: "Yu Gothic", sans-serif;
+                 background-color: #f2f8f7;
+                 color: #333;
+                 margin: 0;
+                 padding: 0;
+                 }
+
+            header{
+                 background-color: #cfeae7;
+                 padding: 20px;
+                 text-align: center;
+                 }
+
+            header h1{
+                 maegin: 0;
+                 font-size: 2em;
+                 color: #3a5a5c
+                 }
+
+            nav{
+                 background-color: #a6d5cf;
+                 text-align: center;
+                 padding: 10px 0;
+                 }
+
+            nav a{
+                 margin: 0 15px;
+                 color: #fff;
+                 text-decoration: none;
+                 font-weight: bold;
+                 }
+
+            main{
+                 padding: 30px;
+                 text-align: center;
+                 }
+
+            main h2{
+                 color:#3a5a5c;
+                 }
+
+            .product {
+                 background-color: #ffffff;
+                 border-radius: 10px;
+                 padding: 20px;
+                 margin: 20px auto;
+                 max-width: 500px;
+                 box-shadow: 0 2px 5px raba(0,0,0,0.1);
+                 }
+
+            footer{
+                 background-color: #cfeae7;
+                 text-alogn: center;
+                 padding: 15px;
+                 font-size: 0.9em;
+                 color: #666;
+                 }
+
+           .section{
+                   text-align: center;
+                    }
+
+     </style>
     </head>
     <body>
+<nav>
+     <a href="index.html">ホーム</a>
+     <a href="products.html">商品紹介</a>
+     <a href="about.html">こころケア文具とは</a>
+     <a href="coutact.html">お問い合わせ</a>
+
+</nav>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<style>
+.section{
+         text-align: center;
+         }
+</style>
+</head>
+<body>
+<div class="main">
+<div class="section">
           <h1>商品紹介</h1>
-          <p>ああああああああああああああ</p>
+     <main>
+
+
+            <div class="product">
+<a href="products.html"><h3>ことばふせん</h3></a>
+
+<img src="00475.jpg" "width="200" height="200" >
+
+                <p>１枚ずつに「大丈夫だよ」「今日はよく頑張ったね」など
+            <br>   優しいメッセージ付き</div>
+
+            <div class="product">
+                <h3>感情スタンプセット</h3>
+
+<img src="360.jpg" "width="200" height="200" >
+
+                <p>「うれしい」「かなしい」「もやもや」など
+            <br>
+                その時の気持ちを日記に押して記録</div>
+
+            <div class="product">
+                <h3>空想日記</h3>
+
+<img src="023.png" "width="200" height="200" >
+
+                <p>毎日「今日あったこと＋空想の世界」など自由に書けるノート</div>
+
+     </main>
+
           <p><a href="index.html">←ホームに戻る</a></p>
     </body>
     </html>
