--- a/products.html
+++ b/products.html
@@ -96,7 +96,7 @@
 
 
             <div class="product">
-<a href="products.html"><h3>ことばふせん</h3></a>
+                <h3>ことばふせん</h3>
 
 <img src="00475.jpg" "width="200" height="200" >
 
