--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="index.html">ホーム</a>
             <a href="products.html">商品紹介</a>
             <a href="about.html">こころケア文具とは</a>
-            <a href="coutact.html">お問い合わせ</a>
+            <a href="contact.html">お問い合わせ</a>
      </nav>
 
 <br>
