--- a/products.html
+++ b/products.html
@@ -73,7 +73,7 @@
 <nav>
      <a href="index.html">ホーム</a>
      <a href="about.html">こころケア文具とは</a>
-     <a href="coutact.html">お問い合わせ</a>
+     <a href="contact.html">お問い合わせ</a>
 
 </nav>
 
