--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
      <a href="index.html">ホーム</a>
      <a href="products.html">商品紹介</a>
       
-     <a href="coutact.html">お問い合わせ</a>
+     <a href="contact.html">お問い合わせ</a>
 
 </nav>
 
